feat(auth): add dummy login functionality

--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -19,7 +19,7 @@
           <div class="ion-padding">
             <div>
               <ion-button fill="outline" size="medium" type="submit" disabled="true">Sign Up</ion-button>
-              <ion-button color="primary" size="medium" type="submit">Sign In</ion-button>
+              <ion-button (click)="login()" color="primary" size="medium" type="submit">Sign In</ion-button>
             </div>
           </div>
         </ion-col>
