--- a/src/app/pages/menu/menu.page.html
+++ b/src/app/pages/menu/menu.page.html
@@ -16,14 +16,12 @@
           </ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle auto-hide="false">
-          <a href="#" class="ion-text-decoration-none">
-            <ion-item (click)="logout()">
-              <ion-icon slot="start" name="log-out"></ion-icon>
-              <ion-label>
-                Log out
-              </ion-label>
-            </ion-item>
-          </a>
+          <ion-item (click)="logout()" [routerLink]="">
+            <ion-icon slot="start" name="log-out"></ion-icon>
+            <ion-label>
+              Log out
+            </ion-label>
+          </ion-item>
         </ion-menu-toggle>
       </ion-list>
     </ion-content>
