--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -1,43 +1,47 @@
 <ion-content class="ion-padding">
-  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-    <ion-grid>
-      <ion-row class="ion-justify-content-center">
-        <ion-col class="ion-align-self-center" size-md="6" size-lg="5" size-xs="12">
-          <div class="ion-text-center">
-            <h3>Sign in</h3>
-          </div>
-          <div class="ion-padding">
-            <ion-item>
-              <ion-icon name="mail" slot="start"></ion-icon>
-              <ion-input formControlName="email"  type="email" placeholder="Email" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" required></ion-input>
-            </ion-item>
-            <ion-item>
-              <ion-icon name="lock" slot="start"></ion-icon>
-              <ion-input formControlName="password" type="password" placeholder="Password" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" required></ion-input>
-            </ion-item>
-          </div>
+  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" style="height: 100%">
+    <ion-grid style="height: 100%">
+      <ion-row class="ion-justify-content-center ion-align-items-center" style="height: 100%;">
+        <ion-col size-md="6" size-lg="5" size-xs="12">
+          <ion-card>
+            <ion-card-header class="ion-text-center">
+              <ion-card-title>Sign in</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              <div class="ion-padding">
+                <ion-item>
+                  <ion-icon name="mail" slot="start"></ion-icon>
+                  <ion-input formControlName="email"  type="email" placeholder="Email" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" required></ion-input>
+                </ion-item>
+                <ion-item>
+                  <ion-icon name="lock" slot="start"></ion-icon>
+                  <ion-input formControlName="password" type="password" placeholder="Password" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" required></ion-input>
+                </ion-item>
+              </div>
 
-          <ion-list class="error-messages" class="ion-margin-horizontal">
-            <ion-item color="danger" *ngIf="submitted && f.email.errors">
-              <div *ngIf="f.email.errors.required">Email is required</div>
-              <div *ngIf="f.email.errors.email">Please provide a valid email address</div>
-            </ion-item>
-            <ion-item color="danger" *ngIf="submitted && f.password.errors" >
-              <div *ngIf="f.password.errors.required">Password is required</div>
-              <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
-            </ion-item>
-          </ion-list>
+              <ion-list class="error-messages" class="ion-margin-horizontal">
+                <ion-item color="danger" *ngIf="submitted && f.email.errors">
+                  <div *ngIf="f.email.errors.required">Email is required</div>
+                  <div *ngIf="f.email.errors.email">Please provide a valid email address</div>
+                </ion-item>
+                <ion-item color="danger" *ngIf="submitted && f.password.errors" >
+                  <div *ngIf="f.password.errors.required">Password is required</div>
+                  <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
+                </ion-item>
+              </ion-list>
 
-          <ion-grid class="ion-margin-horizontal">
-            <ion-row>
-              <ion-col>
-                <ion-button fill="outline" size="medium" expand="block" disabled="true">Sign Up</ion-button>
-              </ion-col>
-              <ion-col>
-                <ion-button color="primary" size="medium" expand="block" type="submit">Sign In</ion-button>
-              </ion-col>
-            </ion-row>
-          </ion-grid>
+              <ion-grid class="ion-margin-horizontal">
+                <ion-row>
+                  <ion-col>
+                    <ion-button fill="outline" size="medium" expand="block" disabled="true">Sign Up</ion-button>
+                  </ion-col>
+                  <ion-col>
+                    <ion-button color="primary" size="medium" expand="block" type="submit">Sign In</ion-button>
+                  </ion-col>
+                </ion-row>
+              </ion-grid>
+            </ion-card-content>
+          </ion-card>
         </ion-col>
       </ion-row>
     </ion-grid>
