--- a/src/app/pages/stories/stories.page.html
+++ b/src/app/pages/stories/stories.page.html
@@ -15,8 +15,12 @@
       <ion-card-title>{{ story.title }}</ion-card-title>
     </ion-card-header>
     <img [src]="story.imageUrl" />
-<!--     <ion-card-content>
-      {{ story.date.toLocaleDateString("en-US") }}
-    </ion-card-content> -->
   </ion-card>
+
+  <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
+    <ion-infinite-scroll-content
+      loadingSpinner="bubbles"
+      loadingText="Loading more stories...">
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
