--- a/src/app/pages/stories/story-detail/story-detail.page.html
+++ b/src/app/pages/stories/story-detail/story-detail.page.html
@@ -1,14 +1,10 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
+      <!-- <ion-menu-button></ion-menu-button> -->
       <ion-back-button defaultHref="/app/stories"></ion-back-button>
     </ion-buttons>
     <ion-title>{{ story.title }}</ion-title>
-    <ion-buttons slot="primary">
-      <ion-button (click)="onDeleteRecipe()">
-        <ion-icon name="trash" slot="icon-only">Delete recipe</ion-icon>
-      </ion-button>
-    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
